@@ -930,6 +930,14 @@ dump_statistics (void)
 #endif
 }
 
+#ifndef OBJ_VMS
+static void
+close_output_file (void)
+{
+  output_file_close (out_file_name);
+}
+#endif
+
 /* The interface between the macro code and gas expression handling.  */
 
 static int
@@ -1081,6 +1089,11 @@ main (int argc, char ** argv)
   input_scrub_begin ();
   expr_begin ();
 
+#ifndef OBJ_VMS /* Does its own file handling.  */
+  /* It has to be called after dump_statistics ().  */
+  xatexit (close_output_file);
+#endif
+
   if (flag_print_statistics)
     xatexit (dump_statistics);
 
@@ -1167,10 +1180,6 @@ main (int argc, char ** argv)
 
 #ifndef NO_LISTING
   listing_print (listing_filename);
-#endif
-
-#ifndef OBJ_VMS /* Does its own file handling.  */
-  output_file_close (out_file_name);
 #endif
 
   if (flag_fatal_warnings && had_warnings () > 0 && had_errors () == 0)
